--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="/images/logo.png" alt="" />
+            <img src="images/logo.png" alt="" />
           </a>
           <button
             class="navbar-toggler"
@@ -77,7 +77,7 @@
               </div>
               <div class="col-md-5">
                 <img
-                  src="/images/banner-images/tv.png"
+                  src="images/banner-images/tv.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -93,7 +93,7 @@
               </div>
               <div class="col-md-5">
                 <img
-                  src="/images/banner-images/headphone.png"
+                  src="images/banner-images/headphone.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -109,7 +109,7 @@
               </div>
               <div class="col-md-5">
                 <img
-                  src="/images/banner-images/xbox.png"
+                  src="images/banner-images/xbox.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -143,19 +143,19 @@
         <div class="col-md-4">
           <div class="cat1 d-flex justify-content-between align-items-center">
             <h1>Bag</h1>
-            <img src="/images/categories/bag.png" alt="" />
+            <img src="images/categories/bag.png" alt="" />
           </div>
         </div>
         <div class="col-md-4">
           <div class="cat2 d-flex justify-content-between align-items-center">
             <h1>Watch</h1>
-            <img src="/images/categories/watch.png" alt="" />
+            <img src="images/categories/watch.png" alt="" />
           </div>
         </div>
         <div class="col-md-4">
           <div class="cat3 d-flex justify-content-between align-items-center">
             <h1>Shoes</h1>
-            <img src="/images/categories/shoes.png" alt="" />
+            <img src="images/categories/shoes.png" alt="" />
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Supply 350</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -180,7 +180,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Nike 320</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -191,7 +191,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Red Max</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -210,7 +210,7 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="/images/bags/bag-1.png" class="card-img-top" alt="...">
+      <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Red Backpack</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -221,7 +221,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="/images/bags/bag-2.png" class="card-img-top" alt="...">
+      <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Blue Backpack</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -232,7 +232,7 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="/images/bags/bag-3.png" class="card-img-top" alt="...">
+      <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Black Backpack</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
